overflow fix

--- a/src/styles/mixins.scss
+++ b/src/styles/mixins.scss
@@ -208,6 +208,7 @@
         color: $color-neutral;
         overflow: hidden;
         text-overflow: ellipsis;
+        max-width: calc(100% - 100px);
 
         .ng-value-label {
           overflow: hidden;
@@ -223,6 +224,11 @@
           cursor: pointer;
           font-size: var(--font-size);
           caret-color: $color-primary;
+
+          display: block !important;
+          text-overflow: ellipsis !important;
+          overflow: hidden !important;
+          white-space: nowrap !important;
         }
       }
     }
@@ -393,6 +399,7 @@
 @mixin mat-textbox-overflow-adjustment() {
   ::ng-deep .mat-mdc-form-field-flex > .mat-mdc-form-field-infix {
     overflow: hidden;
+    text-overflow: ellipsis;
   }
 }
 
